fix overflow wrapping in article-tooltip

--- a/static/css/components.css
+++ b/static/css/components.css
@@ -280,6 +280,7 @@
         z-index: 999;
         text-decoration: none;
         font-size: 17px;
+        overflow-wrap: anywhere;
     }
 
         .article:hover > .article-tooltip {
